[package]
name = "brokr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.3"
linkify = "0.10.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"

[[bin]]
path = "src/main.rs"
name = "brokr"
